fix: Cleans up i18n placeholders and adjusts spacing

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -149,7 +149,7 @@ input:checked + .switch::after {
     transform: translateX(20px);
 }
 .options>label {
-    margin-left: 2px;
+    margin-left: 4px;
     font-size: 16px;
     color: hsl(0, 0%, 2%);
 }
